#8 add websocket library to update function, logging fallback to rest if no websocket possible